raw_learning/Group B/help/k8s/network-policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: secure-redis-access
  namespace: commx-prod
spec:
  endpointSelector:
    matchLabels:
      app: redis
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: commx-backend
    toPorts:
    - ports:
      - port: "6379"
        protocol: TCP
